--- a/src/index.css
+++ b/src/index.css
@@ -678,19 +678,6 @@ html:lang(en) .c-entity__text {
   transform: none;
 }
 
-.c-character {
-  display: flex;
-  align-items: center;
-  column-gap: 0.5em;
-}
-.c-character__type {
-  display: flex;
-  align-items: center;
-}
-.c-character .c-character__mana {
-  height: 1.5em;
-}
-
 .c-request__dot--active {
   background: var(--dot-color);
 }
@@ -709,6 +696,10 @@ html:lang(en) .c-entity__text {
 .p-result__background {
   position: relative;
   z-index: 0;
+}
+.p-result__spellcard {
+  top: 30%;
+  right: 20%;
 }
 .p-result__type {
   left: var(--left);
