--- a/src/index.css
+++ b/src/index.css
@@ -814,7 +814,13 @@ html:lang(en) .p-result__type {
   --color: var(--green);
   font-weight: bold;
   border-radius: 2em;
+  background-color: transparent;
+  border: none;
   cursor: pointer;
+  outline: none;
+  padding: 0;
+  appearance: none;
+  font-size: initial;
   box-sizing: border-box;
   width: 7em;
   height: 2em;
