--- a/src/index.css
+++ b/src/index.css
@@ -138,9 +138,10 @@ img {
   align-items: stretch;
   width: fit-content;
   margin: 0.3125em 0;
-  padding: 0.3125em;
+  padding: 0 0.3125em;
   border-radius: 0.625em;
   color: inherit;
+  column-gap: 0.3125em;
 }
 .p-run-list__row:nth-child(odd) {
   background: var(--light-blue);
@@ -151,9 +152,6 @@ img {
 .p-run-list__row--header {
   font-weight: bold;
   text-align: center;
-}
-.p-run-list__cell {
-  padding: 0.3125em;
 }
 .p-run-list__cell--result-requests {
   display: flex;
@@ -790,12 +788,14 @@ html:lang(en) .p-result__type {
   gap: var(--gap);
 }
 
+.p-filter__character-spellcards,
 .p-filter__character-exhibits {
   display: flex;
   flex-direction: column;
   row-gap: var(--gap);
   visibility: hidden;
 }
+.p-filter__character-spellcards--visible,
 .p-filter__character-exhibits--visible {
   visibility: visible;
 }
